--- a/src/forms.less
+++ b/src/forms.less
@@ -9,7 +9,6 @@ input[type="text"], textarea {
   font-size: 16px;
   color: #999999;
   padding: 21px @md-size;
-  margin-bottom: @sm-size;
   width: 100%;
 
   &:disabled {
