--- a/src/tag-styles.less
+++ b/src/tag-styles.less
@@ -1,8 +1,5 @@
 html, body {
   height: 100%;
-  // following rules to accommodate hamburger menu on safari
-  overflow-x: hidden;
-  position: relative;
   // stop ios safari from changing font sizes at will upon orientation change
   text-size-adjust: 100%;
 }
@@ -50,4 +47,20 @@ label {
 
 ul, ol {
   list-style-position: inside;
+}
+
+antidote-catalog-search {
+  margin-top: @md-size;
+}
+
+antidote-catalog-filters {
+  margin-top: @base-size;
+}
+
+antidote-collections-filters {
+  margin-top: @base-size;
+}
+
+antidote-course-plan-name-field {
+  margin-top: @sm-size;
 }
